--- a/index.html
+++ b/index.html
@@ -140,7 +140,8 @@
 <!--card section-->
 
 <!--banner section-->
-<div class="h-screen flex items-center justify-center bg-no-repeat bg-cover bg-center my-5" style="background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('./Photo/house4.jpg')">
+<div class="h-screen flex items-center justify-center bg-no-repeat bg-cover bg-center my-5"
+     style="background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('./Photo/house4.jpg')">
     <div class="container flex flex-col items-center justify-center">
         <h2 class="text-4xl font-bold text-white mb-4 text-center">Experience Luxury Like Never Before </h2>
         <h3 class="text-2xl mb-8 text-gray-200 text-center">50+ Exotic locations across the globe</h3>
@@ -163,7 +164,10 @@
             <img class="w-full rounded-t-xl" src="./Photo/2.jpg" alt="House Photo">
             <div class="px-6 py-4">
                 <div class="font-bold text-xl mb-2 text-center">New York</div>
-                <p class="text-gray-600 text-center">New York City comprises 5 boroughs sitting where the Hudson River meets the Atlantic Ocean. At its core is Manhattan, a densely populated borough that’s among the world’s major commercial, financial and cultural centers. Its iconic sites include skyscrapers such as the Empire State Building and sprawling Central Park.</p>
+                <p class="text-gray-600 text-center">New York City comprises 5 boroughs sitting where the Hudson River
+                    meets the Atlantic Ocean. At its core is Manhattan, a densely populated borough that’s among the
+                    world’s major commercial, financial and cultural centers. Its iconic sites include skyscrapers such
+                    as the Empire State Building and sprawling Central Park.</p>
             </div>
             <div class="bg-green-500 p-4 flex justify-center items-center cursor-pointer rounded-b-xl">
                 <button class="text-white font-bold text-xl">Check More</button>
@@ -174,7 +178,10 @@
             <img class="w-full rounded-t-xl" src="./Photo/3.jpg" alt="House Photo">
             <div class="px-6 py-4">
                 <div class="font-bold text-xl mb-2 text-center">San Fransisco</div>
-                <p class="text-gray-600 text-center">New York City comprises 5 boroughs sitting where the Hudson River meets the Atlantic Ocean. At its core is Manhattan, a densely populated borough that’s among the world’s major commercial, financial and cultural centers. Its iconic sites include skyscrapers such as the Empire State Building and sprawling Central Park.</p>
+                <p class="text-gray-600 text-center">New York City comprises 5 boroughs sitting where the Hudson River
+                    meets the Atlantic Ocean. At its core is Manhattan, a densely populated borough that’s among the
+                    world’s major commercial, financial and cultural centers. Its iconic sites include skyscrapers such
+                    as the Empire State Building and sprawling Central Park.</p>
             </div>
             <div class="bg-green-500 p-4 flex justify-center items-center cursor-pointer rounded-b-xl">
                 <button class="text-white font-bold text-xl">Check More</button>
@@ -185,7 +192,10 @@
             <img class="w-full rounded-t-xl" src="./Photo/4.jpg" alt="House Photo">
             <div class="px-6 py-4">
                 <div class="font-bold text-xl mb-2 text-center">California</div>
-                <p class="text-gray-600 text-center">New York City comprises 5 boroughs sitting where the Hudson River meets the Atlantic Ocean. At its core is Manhattan, a densely populated borough that’s among the world’s major commercial, financial and cultural centers. Its iconic sites include skyscrapers such as the Empire State Building and sprawling Central Park.</p>
+                <p class="text-gray-600 text-center">New York City comprises 5 boroughs sitting where the Hudson River
+                    meets the Atlantic Ocean. At its core is Manhattan, a densely populated borough that’s among the
+                    world’s major commercial, financial and cultural centers. Its iconic sites include skyscrapers such
+                    as the Empire State Building and sprawling Central Park.</p>
             </div>
             <div class="bg-green-500 p-4 flex justify-center items-center cursor-pointer rounded-b-xl">
                 <button class="text-white font-bold text-xl">Check More</button>
@@ -197,7 +207,8 @@
 <!--other card-->
 
 <!--other banner section-->
-<div class="flex h-96 items-center justify-center bg-no-repeat bg-cover bg-center my-5" style="background-image: linear-gradient( 102.1deg,  rgba(96,221,142,1) 8.7%, rgba(24,138,141,1) 88.1% );;">
+<div class="flex h-96 items-center justify-center bg-no-repeat bg-cover bg-center my-5"
+     style="background-image: linear-gradient( 102.1deg,  rgba(96,221,142,1) 8.7%, rgba(24,138,141,1) 88.1% );;">
     <div class="container flex flex-col items-center justify-center">
         <h2 class="ss:text-3xl md:text-4xl font-bold text-white mb-4 text-center">Save upto 50% on the next bill</h2>
         <h3 class="ss:text-xl md:text-2xl mb-8 text-gray-200 text-center">The lowest fee you never see before</h3>
@@ -213,8 +224,135 @@
 <!--textarea-->
 
 <!--review card-->
-
+<div class="flex justify-center">
+    <div class="p-10 grid gap-5 ss:grid-cols-1 sm:grid-cols-1 md:grid-cols-3 lg:grid-cols-3 max-w-screen-2xl">
+        <div class="shadow-xl bg-white rounded-xl p-4 ss:px-8 sm:px-12 md:px-6">
+            <p class="text-gray-500 text-xs">
+                Lorem ipsum dolor sit amet, coer adig elit. Aliam arco autem det dolm does, eaue est erci, exbo fugit
+                iste maam magni nesnt nulla pedis, siue tera toam vitae votum tatum fugit nest iste erci elit eaue arco
+                maam toam vitae.
+            </p>
+            <div class="flex bg-green-100 items-center rounded-full mt-6 mb-4">
+                <a href="" class="block relative">
+                    <img class="h-10 w-10 rounded-full overflow-hidden mx-auto" src="./Photo/avataaars.png" alt="">
+                </a>
+                <div class="flex flex-col ml-2 justify-between">
+                    <span class="text-sm text-green-500 font-semibold">Luna Marion</span>
+                    <span class="text-xs flex items-center">Member, Gold VIP</span>
+                </div>
+            </div>
+        </div>
+        <div class="shadow-xl bg-white rounded-xl p-4 ss:px-8 sm:px-12 md:px-6">
+            <p class="text-gray-500 text-xs">
+                Lorem ipsum dolor sit amet, coer adig elit. Aliam arco autem det dolm does, eaue est erci, exbo fugit
+                iste maam magni nesnt nulla pedis, siue tera toam vitae votum tatum fugit nest iste erci elit eaue arco
+                maam toam vitae.
+            </p>
+            <div class="flex bg-green-100 items-center rounded-full mt-6 mb-4">
+                <a href="" class="block relative">
+                    <img class="h-10 w-10 rounded-full overflow-hidden mx-auto" src="./Photo/avataaars.png" alt="">
+                </a>
+                <div class="flex flex-col ml-2 justify-between">
+                    <span class="text-sm text-green-500 font-semibold">Luna Marion</span>
+                    <span class="text-xs flex items-center">Member, Gold VIP</span>
+                </div>
+            </div>
+        </div>
+        <div class="shadow-xl bg-white rounded-xl p-4 ss:px-8 sm:px-12 md:px-6">
+            <p class="text-gray-500 text-xs">
+                Lorem ipsum dolor sit amet, coer adig elit. Aliam arco autem det dolm does, eaue est erci, exbo fugit
+                iste maam magni nesnt nulla pedis, siue tera toam vitae votum tatum fugit nest iste erci elit eaue arco
+                maam toam vitae.
+            </p>
+            <div class="flex bg-green-100 items-center rounded-full mt-6 mb-4">
+                <a href="" class="block relative">
+                    <img class="h-10 w-10 rounded-full overflow-hidden mx-auto" src="./Photo/avataaars.png" alt="">
+                </a>
+                <div class="flex flex-col ml-2 justify-between">
+                    <span class="text-sm text-green-500 font-semibold">Luna Marion</span>
+                    <span class="text-xs flex items-center">Member, Gold VIP</span>
+                </div>
+            </div>
+        </div>
+        <div class="shadow-xl bg-white rounded-xl p-4 ss:px-8 sm:px-12 md:px-6">
+            <p class="text-gray-500 text-xs">
+                Lorem ipsum dolor sit amet, coer adig elit. Aliam arco autem det dolm does, eaue est erci, exbo fugit
+                iste maam magni nesnt nulla pedis, siue tera toam vitae votum tatum fugit nest iste erci elit eaue arco
+                maam toam vitae.
+            </p>
+            <div class="flex bg-green-100 items-center rounded-full mt-6 mb-4">
+                <a href="" class="block relative">
+                    <img class="h-10 w-10 rounded-full overflow-hidden mx-auto" src="./Photo/avataaars.png" alt="">
+                </a>
+                <div class="flex flex-col ml-2 justify-between">
+                    <span class="text-sm text-green-500 font-semibold">Luna Marion</span>
+                    <span class="text-xs flex items-center">Member, Gold VIP</span>
+                </div>
+            </div>
+        </div>
+        <div class="shadow-xl bg-white rounded-xl p-4 ss:px-8 sm:px-12 md:px-6">
+            <p class="text-gray-500 text-xs">
+                Lorem ipsum dolor sit amet, coer adig elit. Aliam arco autem det dolm does, eaue est erci, exbo fugit
+                iste maam magni nesnt nulla pedis, siue tera toam vitae votum tatum fugit nest iste erci elit eaue arco
+                maam toam vitae.
+            </p>
+            <div class="flex bg-green-100 items-center rounded-full mt-6 mb-4">
+                <a href="" class="block relative">
+                    <img class="h-10 w-10 rounded-full overflow-hidden mx-auto" src="./Photo/avataaars.png" alt="">
+                </a>
+                <div class="flex flex-col ml-2 justify-between">
+                    <span class="text-sm text-green-500 font-semibold">Luna Marion</span>
+                    <span class="text-xs flex items-center">Member, Gold VIP</span>
+                </div>
+            </div>
+        </div>
+        <div class="shadow-xl bg-white rounded-xl p-4 ss:px-8 sm:px-12 md:px-6">
+            <p class="text-gray-500 text-xs">
+                Lorem ipsum dolor sit amet, coer adig elit. Aliam arco autem det dolm does, eaue est erci, exbo fugit
+                iste maam magni nesnt nulla pedis, siue tera toam vitae votum tatum fugit nest iste erci elit eaue arco
+                maam toam vitae.
+            </p>
+            <div class="flex bg-green-100 items-center rounded-full mt-6 mb-4">
+                <a href="" class="block relative">
+                    <img class="h-10 w-10 rounded-full overflow-hidden mx-auto" src="./Photo/avataaars.png" alt="">
+                </a>
+                <div class="flex flex-col ml-2 justify-between">
+                    <span class="text-sm text-green-500 font-semibold">Luna Marion</span>
+                    <span class="text-xs flex items-center">Member, Gold VIP</span>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 <!--review card-->
+
+<!--textarea-->
+<div class="mt-5 flex justify-center p-10">
+    <h2 class="sm:text-3xl text-gray-500 mb-2 ss:text-xl">Contact Us</h2>
+</div>
+<!--textarea-->
+
+<!--form area-->
+<div class="mt-5 flex p-10 justify-center items-center"
+     style="background-image: linear-gradient( 109.6deg,  rgba(24,138,141,1) 11.2%, rgba(96,221,142,1) 91.1% );">
+    <form class="w-full max-w-screen-2xl">
+        <div class="md:flex">
+            <div class="w-full md:w-1/2 px-3 mb-6 md:mb-3">
+                <label for="First_Name" class="block uppercase text-xs text-white font-bold mb-2 tracking-wider">First
+                    Name</label>
+                <input type="text" id="First_Name"
+                       class="text-gray-500 w-full block py-3 px-4 rounded border border-green-500">
+            </div>
+            <div class="w-full md:w-1/2 px-3 mb-6 md:mb-3">
+                <label for="Last_Name" class="block uppercase text-xs text-white font-bold mb-2 tracking-wider">Last
+                    Name</label>
+                <input type="text" id="Last_Name"
+                       class="text-gray-500 w-full block py-3 px-4 rounded border border-green-500">
+            </div>
+        </div>
+    </form>
+</div>
+<!--form area-->
 
 
 <script type="module" src="/main.js"></script>
