--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="robots" content="index,follow"/>
     <meta name="description" content="Prime House | The Best Way You Buy House"/>
     <meta name="author" content="G7M7T1"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Prime House</title>
 </head>
 <body>
@@ -336,7 +337,7 @@
 <div class="mt-5 flex p-10 justify-center items-center"
      style="background-image: linear-gradient( 109.6deg,  rgba(24,138,141,1) 11.2%, rgba(96,221,142,1) 91.1% );">
     <form class="w-full max-w-screen-2xl">
-        <div class="md:flex">
+        <div class="md:flex mb-6 md:mb-3">
             <div class="w-full md:w-1/2 px-3 mb-6 md:mb-3">
                 <label for="First_Name" class="block uppercase text-xs text-white font-bold mb-2 tracking-wider">First
                     Name</label>
@@ -350,10 +351,118 @@
                        class="text-gray-500 w-full block py-3 px-4 rounded border border-green-500">
             </div>
         </div>
+
+        <div class="flex mb-6 md:mb-3">
+            <div class="w-full px-3 md:mb-3">
+                <label for="E_mail" class="block uppercase text-xs text-white font-bold mb-2 tracking-wider">Your
+                    Email</label>
+                <input placeholder="youremail@email.com" type="email" id="E_mail"
+                       class="text-gray-500 w-full block py-3 px-4 rounded border border-green-500">
+            </div>
+        </div>
+
+        <div class="flex mb-6 md:mb-3">
+            <div class="w-full px-3 md:mb-3">
+                <label for="Text_Area" class="block uppercase text-xs text-white font-bold mb-2 tracking-wider">Send Message</label>
+                <textarea type="email" id="Text_Area" class="resize-none h-48 text-gray-500 w-full block py-3 px-4 rounded border border-green-500"></textarea>
+            </div>
+        </div>
+
+        <div>
+            <div class="flex items-center justify-center">
+                <button class="w-1/2 shadow bg-white text-green-500 py-2 px-6 rounded font-bold">Submit</button>
+            </div>
+        </div>
     </form>
 </div>
 <!--form area-->
 
+<!--footer area-->
+<footer class="flex justify-center">
+    <div class="pt-40 px-4 max-w-screen-2xl">
+    <div class="container flex flex-col justify-between mx-auto space-y-8">
+        <a href="#" class="flex justify-center">
+            <div class="flex">
+                <img class="h-8 w-8 mr-2" src="./Photo/logo.png" alt="Logo Icon">
+            </div>
+            <span class="font-semibold text-gray-500 text-2xl">Prime House</span>
+        </a>
+
+        <div class="grid grid-cols-2 gap-x-3 gap-y-8 md:gap-x-6 lg:gap-x-14 sm:grid-cols-4">
+            <div class="space-y-3">
+                <h3 class="footer-title">Product</h3>
+                <ul class="space-y-1">
+                    <li>
+                        <a href="">FAQ</a>
+                    </li>
+
+                    <li>
+                        <a href="">Pricing</a>
+                    </li>
+
+                    <li>
+                        <a href="">Features</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="space-y-3">
+                <h3 class="footer-title">Company</h3>
+                <ul class="space-y-1">
+                    <li>
+                        <a href="">Privacy</a>
+                    </li>
+
+                    <li>
+                        <a href="">Terms Of Service</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="space-y-3">
+                <h3 class="footer-title">Developers</h3>
+                <ul class="space-y-1">
+                    <li>
+                        <a href="">Guides</a>
+                    </li>
+
+                    <li>
+                        <a href="">Public API</a>
+                    </li>
+
+                    <li>
+                        <a href="">Documentation</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="space-y-3">
+                <h3 class="footer-title">Social Media</h3>
+                <div class="flex justify-start space-x-3">
+                    <a href="">
+                        <i class="fa-brands fa-facebook-square fa-2xl text-green-500"></i>
+                    </a>
+
+                    <a href="" class="">
+                        <i class="fa-brands fa-twitter-square fa-2xl text-green-500"></i>
+                    </a>
+
+                    <a href="">
+                        <i class="fa-brands fa-instagram-square fa-2xl text-green-500"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+</footer>
+<!--footer area-->
+
+<!--end-->
+<div class="py-6 text-center text-green-500 font-semibold mt-10 border-t-2">
+    2022 Prime House Website
+</div>
+<!--end-->
 
 <script type="module" src="/main.js"></script>
 </body>
